test-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-service
  template:
    metadata:
      labels:
        app: test-service
    spec:
      containers:
      - name: test-service
        image: nginx:latest
        ports:
        - containerPort: 80
