test-service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  selector:
    app: test-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
