tpb-spec.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: tpb
  namespace: tpb
  uid: 5cfde723-8a73-4da4-8b38-1cb45e445359
  resourceVersion: '8436308'
  generation: 1
  creationTimestamp: '2023-12-28T15:02:25Z'
  labels:
    app: tpb
    chart: tpb
    release: tpb
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"tpb","namespace":"tpb"},"spec":{"rules":[{"host":"test.orglabsolutions.com","http":{"paths":[{"backend":{"service":{"name":"tpb","port":{"number":4000}}},"path":"/","pathType":"Prefix"}]}}]}}
  managedFields:
    - manager: kubectl-client-side-apply
      operation: Update
      apiVersion: networking.k8s.io/v1
      time: '2023-12-28T15:02:25Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:spec:
          f:rules: {}
    - manager: dashboard
      operation: Update
      apiVersion: networking.k8s.io/v1
      time: '2023-12-28T15:27:28Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:labels:
            .: {}
            f:app: {}
            f:chart: {}
            f:release: {}
spec:
  rules:
    - host: test.orglabsolutions.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tpb
                port:
                  number: 4000
status:
  loadBalancer:
    ingress:
      - hostname: >-
          ac24fffd5eec8445db707fc1d298d32c-885701259.us-east-2.elb.amazonaws.com
